edit text content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <section class="container" ng-controller="appController">
-      <h1>Number Guessing Game!</h1>
+      <h1>Random Password Generator!</h1>
       <form>
         <section class="form-group">
           <label for="userGuess">Enter a number 6-20</label>
